Added a lot of error handling and set up swagger in a better way
